syntax = "proto3";

option java_multiple_files = true;
option java_package = "ai.wanaku.core.exchange.v1";
option java_outer_classname = "ResourceExchange";

package ai.wanaku.resource.v1;

// The resource exchange service definition.
service ResourceAcquirer {
  // Acquires a resource
  rpc ResourceAcquire (ResourceRequest) returns (ResourceReply) {}
}

// The resource request message
message ResourceRequest {
  string location = 1;
  string type = 2;
  string name = 3;
  map<string, string> params = 4;
  string configuration_uri = 5;
  string secrets_uri = 6;
}

// The resource response message
message ResourceReply {
  reserved 1;
  reserved "isError";
  repeated string content = 2;
}
